* 2005-04-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- Added exception dialog to send in bug reports
	- Axis values checked for being round wrong way
	
* 2005-04-09 Jeremy Sanders <jeremy@jeremysanders.net>
	- Different types of error bars supported (diamond, curve, box)
	- Improve function plot line clipping near edges
	- Filled regions above/below/left/right of function
	- Filled regions above/below xy points (or histogram)
	- Axis setting to match one axis to another (equal scales)
	- resolve function moved to document from commandinterface
	(helps axis matching)
	
* 2005-04-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed widget moving buttons! - correct algorithm now
	- Implemented save/restore of window and dock positions between
	sessions

* 2005-04-02 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed always-redrawing bug
	- Implemented widget delete button
	- Implemented widget moving buttons
	
* 2005-03-26 Jeremy Sanders <jeremy@jeremysanders.net>
	- TextLabels now support rotation

* 2005-03-25 Jeremy Sanders <jeremy@jeremysanders.net>
	- Veusz now tracks default settings in ~/.veusz.def file for each
	user
	- It is possible to copy settings from one widget to another using
	a menu
	- The bullseye symbol works correctly now
	- Reading data now gives the count of conversion errors rather
	than throwing an exception (in the import dialog)
	- ImportFile and ImportString now also return the number of
	conversion errors during reading (as part of a tuple)
	- Added ChangeLog file
	- Fixed problems where Veusz doesn't update plot window due to Qt
	clipping
	- Fitting widget now stores chi2, dof, reduced chi2 setting
	(readonly). This allows	scripts to query these values.
	
	
	